--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
