--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "cheerio": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "fast-xml-parser": "^5.3.2",
+    "lru-cache": "^11.2.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
