--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "puppeteer": "^24.31.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
